Fixed alignment issues, all in line with the header now

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -97,7 +97,6 @@ h2{
   border-color: #fed136;
   color: #404040;
   float: right;
-  margin: 20px;
   padding: 8px !important;
 }
 .back {
@@ -105,8 +104,10 @@ h2{
   border-color: #404040;
   color: white;
   float: left;
-  margin: 20px;
   padding: 8px !important;
+}
+.back, .next{
+  margin-bottom:10px;
 }
 .hidden {
   display: none;
